--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,8 +93,8 @@ build:nas:novnc:
 deploy:nas:novnc:
   stage: deploy
   script:
-    - kubectl -n nas rollout restart deploy/vnc
-    - kubectl -n nas rollout status --timeout=1h deploy/vnc
+    - kubectl -n nas rollout restart deploy/vnc-http
+    - kubectl -n nas rollout status --timeout=1h deploy/vnc-http
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_PIPELINE_SOURCE == "push"
       when: always
