--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,7 +88,7 @@ build:nas:novnc:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_PIPELINE_SOURCE == "push"
     - if: $CI_COMMIT_TAG =~ /^v?\d+\.\d+\.\d+$/
     - when: manual
-      allow_failure: true
+      allow_failure: false
 
 deploy:nas:novnc:
   stage: deploy
