--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,3 +98,5 @@ deploy:nas:novnc:
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_PIPELINE_SOURCE == "push"
       when: always
+  needs:
+    - build:nas:novnc
